[package]

name = "voronoi"
version = "0.1.3"
documentation = "https://docs.rs/voronoi/0.1.3/voronoi/"
authors = [ "Will Turner <rwturner17@gmail.com>" ]
description = "A library to compute Voronoi diagrams, using Fortune's sweepline algorithm"
repository = "https://github.com/petosegan/rust_voronoi"
keywords = ["voronoi", "geometry"]
readme = "Readme.md"
license = "MIT"

[dependencies]
rand = "0.3"
ordered-float = "0.5.0"